--- a/config/app_config.yml.example
+++ b/config/app_config.yml.example
@@ -24,11 +24,11 @@ test:
 staging:
   <<: *defaults
   title_suffix: "Hitta & jämför äldreboenden - Malmö stad (testserver)"
-  assets_url_base: "//assets.malmo.se/external-3.0-staging/"
+  assets_url_base: "//assets.malmo.se/external/v4-staging/"
   map_url: "//xyz.malmo.se/rest/1.0/map-test/?config=configs/aldreboende-1.0.js"
 
 production:
   <<: *defaults
   title_suffix: "Hitta & jämför äldreboenden - Malmö stad"
-  assets_url_base: "//assets.malmo.se/external-3.0/"
+  assets_url_base: "//assets.malmo.se/external/v4/"
   map_url: "//xyz.malmo.se/rest/1.0/map/?config=configs/aldreboende-1.0.js"
