Added Vagrant and puppet files

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ config/deploy.yml
 config/database.yml
 config/app_config.yml
 config/deploy.yml
+config/secrets.yml
 public/assets
+
+/.vagrant
 
 *.rbc
 *.sassc
